--- a/TD/Windy Gridworld Playground.ipynb
+++ b/TD/Windy Gridworld Playground.ipynb
@@ -9,6 +9,8 @@
     "import gym\n",
     "import numpy as np\n",
     "import sys\n",
+    "from IPython.display import clear_output\n",
+    "import time\n",
     "\n",
     "if \"../\" not in sys.path:\n",
     "  sys.path.append(\"../\") \n",
@@ -25,60 +27,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "x  o  o  o  o  o  o  T  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "\n",
-      "(31, -1.0, False, {'prob': 1.0})\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  x  o  o  o  o  o  T  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "\n",
-      "(32, -1.0, False, {'prob': 1.0})\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  x  o  o  o  o  T  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "\n",
-      "(33, -1.0, False, {'prob': 1.0})\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  x  o  o  o  T  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "\n",
-      "(33, -1.0, False, {'prob': 1.0})\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  x  o  o  o  T  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "\n",
-      "(24, -1.0, False, {'prob': 1.0})\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  x  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  T  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "\n",
       "(15, -1.0, False, {'prob': 1.0})\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  x  o  o  o  o\n",
@@ -96,32 +44,37 @@
     "\n",
     "print(env.reset())\n",
     "env.render()\n",
+    "time.sleep(0.5)\n",
+    "clear_output()\n",
     "\n",
     "print(env.step(1))\n",
     "env.render()\n",
+    "time.sleep(.5)\n",
+    "clear_output()\n",
     "\n",
     "print(env.step(1))\n",
     "env.render()\n",
+    "time.sleep(.5)\n",
+    "clear_output()\n",
     "\n",
     "print(env.step(1))\n",
     "env.render()\n",
+    "time.sleep(.5)\n",
+    "clear_output()\n",
     "\n",
     "print(env.step(2))\n",
     "env.render()\n",
+    "time.sleep(.5)\n",
+    "clear_output()\n",
     "\n",
     "print(env.step(1))\n",
     "env.render()\n",
+    "time.sleep(.5)\n",
+    "clear_output()\n",
     "\n",
     "print(env.step(1))\n",
     "env.render()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -140,9 +93,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
